--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             </div>
             <div class="">
               <h3 class="font-weight-light h5">Srikanth Vishwanathan</h3>
-              <p>As CEO of Janaagraha, his focus area in the urban sector has been “city-systems” reforms spanning flagship report the Annual Survey of India’s City-Systems (ASICS) and municipal finance reforms.</p>
+              <p>CEO of Janaagraha, his focus area in the urban sector has been “city-systems” reforms spanning flagship report the Annual Survey of India’s City-Systems (ASICS) and municipal finance reforms.</p>
             </div>
           </div>
 
@@ -241,7 +241,17 @@
             </div>
             <div class="">
               <h3 class="font-weight-light h5">Pawan Mulukutla</h3>
-              <p>Director of Integrated Transport, Electric Mobility & Hydrogen, WRI India, has over two decades of professional experience working at the intersection of urban mobility, energy and environment. </p>
+              <p>Director of Integrated Transport, Electric Mobility & Hydrogen, WRI India, has over two decades of professional experience in urban mobility, energy and environment. </p>
+            </div>
+          </div>
+
+          <div class="text-center p-3 p-md-5 bg-white">
+            <div class="mb-4">            
+              <img src="images/Guests/amitbhatt.webp" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
+            </div>
+            <div class="">
+              <h3 class="font-weight-light h5">Amit Bhatt</h3>
+              <p>Managing Director in India for the International Council on Clean Transportation. Executive Director for Integrated Transport at WRI India for 12 years.</p>
             </div>
           </div>
 
@@ -261,7 +271,7 @@
             </div>
             <div class="">
               <h3 class="font-weight-light h5">Alok Prasanna Kumar</h3>
-              <p>He is Co-Founder and Lead, Vidhi Karnataka. His areas of research include judicial reforms, Constitutional law, urban development, and law and technology.</p>
+              <p>Co-Founder and Lead, Vidhi Karnataka. Research areas include judicial reforms, Constitutional law, urban development, and law and technology.</p>
             </div>
           </div>
 
@@ -350,6 +360,24 @@
       -->
 
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP44.png');"></div>
+          <div class="text">
+            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <h3 class="font-weight-light"><a href="#">Episode 44: How long before Delhi can breathe clean air?</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 09 Dec 2023 <span class="sep">/</span> 55:00</small></span></div>
+            <p class="mb-4">Amit Bhatt lays down the challenges in reducing our dependence on combustion for transportation and energy needs in our cities. Are cities other than Delhi really as clean as they claim to be? Are all the COP committments really percolating down to action on the ground? What are the complexities in climate change governance that is preventing our transition away from combustion?</p>
+            <div>
+              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-youtube"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-spotify"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-podcast"></span></a>
+            </div>
+          </div>
+        </div>
+
+         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP43.png');"></div>
           <div class="text">
             <h5><span class="badge bg-warning">Coming Soon</span></h5>
@@ -370,7 +398,7 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP42.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 42: What is Brand Bengaluru?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 25 Nov 2023 <span class="sep">/</span> 57:17</small></span></div>
             <p class="mb-4">The Bengaluru Restructuring Comittee, of which Ravichandar V is a member, has now been rechristined as Brand Bengaluru Comittee. In this episode we talk at length about what this means. He also Unboxes Bengaluru's newest Habba, Unboxing Bengaluru Habba coming up between 1st & 11th of December.</p>
@@ -388,16 +416,16 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP41.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 41: Are NGO’s effective in enabling sustainable cities?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 18 Nov 2023 <span class="sep">/</span> 01:01:42</small></span></div>
             <p class="mb-4">Ranjit Gadgil of Parisar, Pune helps us understand the effectiveness and the journey of civic activisim in effecting change in the cities towards environmental sustainability. Being an early mover in this space from Pune the learnings in the space is immense.</p>
+            <h5 class="mb-1">Click icons below to watch/listen on the channel of your choice</h5>
             <div>
-              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://youtu.be/XGM8hGCAYCc" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://open.spotify.com/episode/5OiQJlXA5ncrfPk4JWhKQn?si=b43afcca2d594d39" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685?i=1000635230076" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
             </div>
           </div>
