--- a/index.html
+++ b/index.html
@@ -117,6 +117,16 @@
           
           <div class="text-center p-3 p-md-5 bg-white">
             <div class="mb-4">            
+              <img src="images/Guests/chrisbruntlett.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
+            </div>
+            <div class="">
+              <h3 class="font-weight-light h5">Chris Bruntlett</h3>
+              <p>Chris Bruntlett is a Canadian author and urban mobility advocate who strives to communicate the benefits of sustainable transport and inspire happier, healthier, more human-scale cities</p>
+            </div>
+          </div>
+
+          <div class="text-center p-3 p-md-5 bg-white">
+            <div class="mb-4">            
               <img src="images/Guests/rutholdenziel.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
             </div>
             <div class="">
@@ -339,14 +349,15 @@
             <h2 class="font-weight-bold text-black">Podcast Library</h2>
           </div>
         </div>
-        <!--
+        
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/support the pod-1.png');"></div>
           <div class="text">   
+            <h5><span class="badge bg-warning">Coming Soon</span></h5>
             <h3 class="font-weight-light"><a href="#">Year End Special</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Hot Takes <span class="sep">/</span> 30 Dec 2023 <span class="sep">/</span> 00:00</small></span></div>
-            <p class="mb-4">Celebrating 49 Episodes across Talking Heads, Commuter Series and Hot Takes. OoruLabs Mousepads are available to buy. Write to us at oorulabs@gmail.com</p>
-            <h5 class="mb-1">This podcast is distributed on</h5>
+            <p class="mb-4">50th episode of the debut year 2023, celebrating 49 episodes across Talking Heads, Commuter Series and Hot Takes, this special episode will get you the low down on who said what in 2023. We are looking for monetary support to make season 2, starting 2024, bigger and better. Limited OoruLabs merchandise will be available to buy before this episode is out. Write to us at oorulabs@gmail.com to get your merch or to associate with the podcast channel.</p>
+            <h5 class="mb-1">This episode will be available on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
@@ -357,7 +368,43 @@
             </div>
           </div>
         </div>
-      -->
+
+         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP46.png');"></div>
+          <div class="text">
+            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <h3 class="font-weight-light"><a href="#">Episode 46: How can cities curb their car-thusiasm?</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 23 Dec 2023 <span class="sep">/</span> 00:00:00</small></span></div>
+            <p class="mb-4">Chris Bruntlett is the author of two books along with Melissa Bruntlett, "Curbing Traffic" and "Building The Cycling City". He lays out the case for how reducing the dependence on cars can increase urban vitality and liveability for human beings, based on the dutch blueprint and his observations across many countries.</p>
+            <h5 class="mb-1">This episode will be available on</h5>
+            <div>
+              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-youtube"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-spotify"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-podcast"></span></a>
+            </div>
+          </div>
+        </div>
+         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP45.png');"></div>
+          <div class="text">
+            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <h3 class="font-weight-light"><a href="#">Episode 45: How long before Delhi can breathe clean air?</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 16 Dec 2023 <span class="sep">/</span> 00:00:00</small></span></div>
+            <p class="mb-4">Where does your city rank in being prepared for the future? Srikanth Vishwanathan and VR Vachana break down the ten instruments of change that holds back development of our cities in the Annual Survey of India's City Systems. They suggest action items in the short and medium term that can help us achieve good systems in cities.</p>
+             <h5 class="mb-1">This episode will be available on</h5>
+           <div>
+              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-youtube"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-spotify"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-podcast"></span></a>
+            </div>
+          </div>
+        </div>
 
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP44.png');"></div>
@@ -366,6 +413,7 @@
             <h3 class="font-weight-light"><a href="#">Episode 44: How long before Delhi can breathe clean air?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 09 Dec 2023 <span class="sep">/</span> 55:00</small></span></div>
             <p class="mb-4">Amit Bhatt lays down the challenges in reducing our dependence on combustion for transportation and energy needs in our cities. Are cities other than Delhi really as clean as they claim to be? Are all the COP committments really percolating down to action on the ground? What are the complexities in climate change governance that is preventing our transition away from combustion?</p>
+            <h5 class="mb-1">This episode will be available on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
@@ -384,6 +432,7 @@
             <h3 class="font-weight-light"><a href="#">Episode 43: Is good governance a pipedream?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 02 Dec 2023 <span class="sep">/</span> 01:07:00</small></span></div>
             <p class="mb-4">Revathy Ashok, the CEO of Bangalore Political Action Committee (B.PAC) reveals how an India specific PAC can make a difference in civic outcomes. She explains how creating leadership and working with elected representatives is an investment for the long run.</p>
+            <h5 class="mb-1">This episode will be available on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
@@ -402,6 +451,7 @@
             <h3 class="font-weight-light"><a href="#">Episode 42: What is Brand Bengaluru?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 25 Nov 2023 <span class="sep">/</span> 57:17</small></span></div>
             <p class="mb-4">The Bengaluru Restructuring Comittee, of which Ravichandar V is a member, has now been rechristined as Brand Bengaluru Comittee. In this episode we talk at length about what this means. He also Unboxes Bengaluru's newest Habba, Unboxing Bengaluru Habba coming up between 1st & 11th of December.</p>
+            <h5 class="mb-1">Click icons below to watch/listen on the channel of your choice</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
