--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </div>
             <div class="">
               <h3 class="font-weight-light h5">Chris Bruntlett</h3>
-              <p>Chris Bruntlett is a Canadian author and urban mobility advocate who strives to communicate the benefits of sustainable transport and inspire happier, healthier, more human-scale cities</p>
+              <p>Chris Bruntlett is a Canadian author and urban mobility advocate communicating the benefits of sustainable transport and inspire happier, healthier, more human-scale cities</p>
             </div>
           </div>
 
