--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP43.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 43: Is good governance a pipedream?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 02 Dec 2023 <span class="sep">/</span> 01:07:00</small></span></div>
             <p class="mb-4">Revathy Ashok, the CEO of Bangalore Political Action Committee (B.PAC) reveals how an India specific PAC can make a difference in civic outcomes. She explains how creating leadership and working with elected representatives is an investment for the long run.</p>
@@ -442,17 +442,16 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP42.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 42: What is Brand Bengaluru?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 25 Nov 2023 <span class="sep">/</span> 57:17</small></span></div>
-            <p class="mb-4">The Bengaluru Restructuring Comittee, of which Ravichandar V is a member, has now been rechristined as Brand Bengaluru Comittee. In this episode we talk at length about what this means. He also Unboxes Bengaluru's newest Habba, Unboxing Bengaluru Habba coming up between 1st & 11th of December.</p>
+            <p class="mb-4">The Bengaluru Restructuring Committee, of which Ravichandar V is a member, has now been rechristened as Brand Bengaluru Committee. In this episode we talk at length about what this means. He also Unboxes Bengaluru's newest Habba, Unboxing Bengaluru Habba coming up between 1st & 11th of December.</p>
             <h5 class="mb-1">Click icons below to watch/listen on the channel of your choice</h5>
             <div>
-              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://youtu.be/dk_QP-myap4" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://open.spotify.com/episode/7IWeUPcFOutAN0uD7IdCDr?si=0e2669cfb46d4e1e" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
             </div>
           </div>
