--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
             <h5><span class="badge bg-warning">Coming Soon</span></h5>
             <h3 class="font-weight-light"><a href="#">Year End Special</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Hot Takes <span class="sep">/</span> 30 Dec 2023 <span class="sep">/</span> 00:00</small></span></div>
-            <p class="mb-4">50th episode of the debut year 2023, celebrating 49 episodes across Talking Heads, Commuter Series and Hot Takes, this special episode will get you the low down on who said what in 2023. We are looking for monetary support to make season 2, starting 2024, bigger and better. Limited OoruLabs merchandise will be available to buy before this episode is out. Write to us at oorulabs@gmail.com to get your merch or to associate with the podcast channel.</p>
+            <p class="mb-4">50th episode of the debut year 2023, celebrating 49 episodes across Talking Heads, Commuter Series and Hot Takes, this special episode will be more informal and looking back. Will there be a season 2? </p>
             <h5 class="mb-1">This episode will be available on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
