--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
           <div class="text">
             <h5><span class="badge bg-warning">Coming Soon</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 46: How can cities curb their car-thusiasm?</a></h3>
-            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 23 Dec 2023 <span class="sep">/</span> 00:00:00</small></span></div>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 23 Dec 2023 <span class="sep">/</span> 01:03:12</small></span></div>
             <p class="mb-4">Chris Bruntlett is the author of two books along with Melissa Bruntlett, "Curbing Traffic" and "Building The Cycling City". He lays out the case for how reducing the dependence on cars can increase urban vitality and liveability for human beings, based on the dutch blueprint and his observations across many countries.</p>
             <h5 class="mb-1">This episode will be available on</h5>
             <div>
@@ -385,9 +385,9 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP45.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 45: Why city systems will shape India's future?</a></h3>
-            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 16 Dec 2023 <span class="sep">/</span> 01:00:56</small></span></div>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 16 Dec 2023 <span class="sep">/</span> 01:00:37</small></span></div>
             <p class="mb-4">Where does your city rank in being prepared for the future? Srikanth Vishwanathan and VR Vachana break down the ten instruments of change that holds back development of our cities in the Annual Survey of India's City Systems. They suggest action items in the short and medium term that can help us achieve good systems in cities.</p>
              <h5 class="mb-1">This episode will be available on</h5>
            <div>
@@ -404,17 +404,16 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP44.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 44: How long before Delhi can breathe clean air?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 09 Dec 2023 <span class="sep">/</span> 53:40</small></span></div>
-            <p class="mb-4">Amit Bhatt lays down the challenges in reducing our dependence on combustion for transportation and energy needs in our cities. Are cities other than Delhi really as clean as they claim to be? Are all the COP committments really percolating down to action on the ground? What are the complexities in climate change governance that is preventing our transition away from combustion?</p>
-            <h5 class="mb-1">This episode will be available on</h5>
+            <p class="mb-4">Amit Bhatt lays down the challenges in reducing our dependence on combustion for transportation and energy needs in our cities. Are cities other than Delhi really as clean as they claim to be? Are all the COP commitments really percolating down to action on the ground? What are the complexities in climate change governance that is preventing our transition away from combustion?</p>
+            <h5 class="mb-1">Click icons below to watch/listen on the channel of your choice</h5>
             <div>
-              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://youtu.be/DxuYVCQ7qKY" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://open.spotify.com/episode/1G5nDH9wF4XSCuBZOHYREi?si=f307082a8ab04373" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685?i=1000637982713" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
             </div>
           </div>
