--- a/season1.html
+++ b/season1.html
@@ -100,248 +100,13 @@
       </div>
     </div>  
 
-    <div class="site-section bg-light block-13">
-      <div class="container">
-        <div class="row mb-5">
-          <div class="col-md-12 text-center">
-            <h2 class="font-weight-bold text-black">Featured Guests</h2>
-            <div class="text-white mb-3"><span class="text-black-opacity-05">OoruLabs <span class="sep">|</span> Talking Heads</span></div>
-          </div>
-        </div>
-        <div class="nonloop-block-13 owl-carousel">
-          
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/Guests/chrisbruntlett.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
-            </div>
-            <div class="">
-              <h3 class="font-weight-light h5">Chris Bruntlett</h3>
-              <p>Chris Bruntlett is a Canadian author and urban mobility advocate communicating the benefits of sustainable transport and inspire happier, healthier, more human-scale cities</p>
-            </div>
-          </div>
-
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/Guests/rutholdenziel.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
-            </div>
-            <div class="">
-              <h3 class="font-weight-light h5">Dr Ruth Oldenziel</h3>
-              <p>Professor in the History of Technology at Eindhoven University of Technology. With PhD at Yale she is the Editor in Chief of the Journal of Technology and Culture, Johns Hopkins University.</p>
-            </div>
-          </div>
-
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/Guests/paulbarter.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
-            </div>
-            <div class="">
-              <h3 class="font-weight-light h5">Dr Paul Barter</h3>
-              <p>He is a transport-policy researcher, adviser, writer and trainer with a background in academia and in non-profits. He focuses on urban transport policy and parking</p>
-            </div>
-          </div>
-
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/Guests/dirkdejager.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
-            </div>
-            <div class="">
-              <h3 class="font-weight-light h5">Dirk de Jager</h3>
-              <p>He has experience as a city councilor in various city districts in Amsterdam. He has experience with vision development, strategy and design of bicycle infrastructure.</p>
-            </div>
-          </div>
-
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/Guests/ashwinmahesh.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
-            </div>
-            <div class="">
-              <h3 class="font-weight-light h5">Dr Ashwin Mahesh</h3>
-              <p>He is a scientist, an urbanist, journalist, politician and social technologist. He is working to increase the number of problem solving people.</p>
-            </div>
-          </div>
-
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/Guests/ravichandarv.jpg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
-            </div>
-            <div class="">
-              <h3 class="font-weight-light h5">Ravichandar V</h3>
-              <p>Urban and Civic evangelist, Member Bengaluru Restructuring Committee, Designer of the Bengaluru property tax Self Assessment Scheme, Evangelist JNNURM.</p>
-            </div>
-          </div>
-
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/Guests/anjalikmohan.png" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
-            </div>
-            <div class="">
-              <h3 class="font-weight-light h5">Dr Anjali K Mohan</h3>
-              <p>She has over three decades of experience in development, institutional and policy frameworks, urban planning and management with work in many cities across India.</p>
-            </div>
-          </div>
-
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/Guests/vinayakbharne.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
-            </div>
-            <div class="">
-              <h3 class="font-weight-light h5">Vinayak Bharne</h3>
-              <p>A Presidential Fellow of USC Marshall School of Business. Faculty, USC School of Architecture, Price School of Public Policy, East Asian Studies Center, US-China Institute, among others</p>
-            </div>
-          </div>
-
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/Guests/srikanthvishwanathan.jpg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
-            </div>
-            <div class="">
-              <h3 class="font-weight-light h5">Srikanth Vishwanathan</h3>
-              <p>CEO of Janaagraha, his focus area in the urban sector has been “city-systems” reforms spanning flagship report the Annual Survey of India’s City-Systems (ASICS) and municipal finance reforms.</p>
-            </div>
-          </div>
-
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/Guests/rajcherubal.jpg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
-            </div>
-            <div class="">
-              <h3 class="font-weight-light h5">Raj Cherubal</h3>
-              <p>With a double MS in Physics and Nuclear Engineering he has been the CEO of Chennai Smart City and now with UNDP. He has extensive experience working as a technocrat in the Government of Tamil Nadu.</p>
-            </div>
-          </div>
-
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/Guests/zenrainman.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
-            </div>
-            <div class="">
-              <h3 class="font-weight-light h5">Vishwanath S</h3>
-              <p>AKA Zenrainman, he has been the guru on water for over four decades. Beyond helping people with water sustainability measures he has been an mentor and a teacher for many in the city.</p>
-            </div>
-          </div>
-
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/Guests/nareshvn.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
-            </div>
-            <div class="">
-              <h3 class="font-weight-light h5">Naresh Narasimhan</h3>
-              <p>Runs a successful architecture firm, but has created more impact in the city by his work outside the building with projects like Church street and the K100 waterways project.</p>
-            </div>
-          </div>
-
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/Guests/revathyashok.jpg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
-            </div>
-            <div class="">
-              <h3 class="font-weight-light h5">Revathy Ashok</h3>
-              <p>The CEO of Bengaluru Political Action Comittee (B.PAC), which runs the B.CLIP program training and supporting leaders for political service.</p>
-            </div>
-          </div>
-
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/Guests/pawanmulukutla.jpg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
-            </div>
-            <div class="">
-              <h3 class="font-weight-light h5">Pawan Mulukutla</h3>
-              <p>Director of Integrated Transport, Electric Mobility & Hydrogen, WRI India, has over two decades of professional experience in urban mobility, energy and environment. </p>
-            </div>
-          </div>
-
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/Guests/amitbhatt.webp" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
-            </div>
-            <div class="">
-              <h3 class="font-weight-light h5">Amit Bhatt</h3>
-              <p>Managing Director in India for the International Council on Clean Transportation. Executive Director for Integrated Transport at WRI India for 12 years.</p>
-            </div>
-          </div>
-
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/Guests/shreyagadepalli.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
-            </div>
-            <div class="">
-              <h3 class="font-weight-light h5">Shreya Gadepalli</h3>
-              <p>Founder of Urbanworks Institute and ITDP India practice she guided dozens of cities to design and implement public transport systems and inclusive streets.</p>
-            </div>
-          </div>
-
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/Guests/alokpkumar.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
-            </div>
-            <div class="">
-              <h3 class="font-weight-light h5">Alok Prasanna Kumar</h3>
-              <p>Co-Founder and Lead, Vidhi Karnataka. Research areas include judicial reforms, Constitutional law, urban development, and law and technology.</p>
-            </div>
-          </div>
-
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/Guests/satyaarikutharam.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
-            </div>
-            <div class="">
-              <h3 class="font-weight-light h5">Satya Arikutharam</h3>
-              <p>He recently advised a state government in India and provided key inputs to the Unified Metropolitan Transport Authority in Bengaluru and to promote active mobility in Karnataka.</p>
-            </div>
-          </div>
-
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/Guests/ravigadepalli.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
-            </div>
-            <div class="">
-              <h3 class="font-weight-light h5">Ravi Gadepalli</h3>
-              <p>He works on projects advancing bus systems, paratransit services and electric mobility. He works with the World Bank, Asian Development Bank, UITP and IFC</p>
-            </div>
-          </div>
-
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/Guests/srinualavilli.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
-            </div>
-            <div class="">
-              <h3 class="font-weight-light h5">Srinivas Alavilli</h3>
-              <p>He is a strong believer in systems like ward committees that enable citizen participation and bridge the gap between politicians and citizens in local governance.</p>
-            </div>
-          </div>
-
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/Guests/amitgupta.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
-            </div>
-            <div class="">
-              <h3 class="font-weight-light h5">Amit Gupta</h3>
-              <p>Co-Founder and CEO of Yulu, a leading micromobility shared services company in India. He was earlier the co-founder of InMobi a successful startup.</p>
-            </div>
-          </div>
-
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/Guests/arjitsoni.jpg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
-            </div>
-            <div class="">
-              <h3 class="font-weight-light h5">Arjit Soni</h3>
-              <p>A chartered accountant and the founder of one of Indias few functional multicity bicycle sharing company, MY-BYK</p>
-            </div>
-          </div>
-
-
-        </div>
-      </div>
-    </div>
-
 
     <div class="site-section bg-light">
       <div class="container">
 
         <div class="row mb-5" data-aos="fade-up">
           <div class="col-md-12 text-center">
-            <h2 class="font-weight-bold text-black">Podcast Library</h2>
+            <h2 class="font-weight-bold text-black">Season 1 Episodes</h2>
           </div>
         </div>
         
@@ -367,8 +132,7 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP46.png');"></div>
           <div class="text">
-            <!--<h5><span class="badge bg-warning">Coming Soon</span></h5>-->
-            <h5><span class="badge bg-success text-white">Up next</span></h5>
+            <h5><span class="badge bg-warning">Coming Soon</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 46: How can cities curb their car-thusiasm?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 23 Dec 2023 <span class="sep">/</span> 01:03:12</small></span></div>
             <p class="mb-4">Chris Bruntlett is the author of two books along with Melissa Bruntlett, "Curbing Traffic" and "Building The Cycling City". He lays out the case for how reducing the dependence on cars can increase urban vitality and liveability for human beings, based on the dutch blueprint and his observations across many countries.</p>
@@ -386,16 +150,17 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP45.png');"></div>
           <div class="text">
+            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 45: Why city systems will shape India's future?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 16 Dec 2023 <span class="sep">/</span> 01:00:37</small></span></div>
             <p class="mb-4">Where does your city rank in being prepared for the future? Srikanth Vishwanathan and VR Vachana break down the ten instruments of change that holds back development of our cities in the Annual Survey of India's City Systems. They suggest action items in the short and medium term that can help us achieve good systems in cities.</p>
              <h5 class="mb-1">This episode will be available on</h5>
            <div>
-              <a href="https://youtu.be/tbeb1ERyGoE" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
-              <a href="https://open.spotify.com/episode/5Nfx1Dn9mzWjZ9ksWW5LtR?si=d157166677ab4e03" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
-              <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685?i=1000638740316" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
             </div>
           </div>
