--- a/index.html
+++ b/index.html
@@ -348,7 +348,8 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/support the pod-1.png');"></div>
           <div class="text">   
-            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+<!--            <h5><span class="badge bg-warning">Coming Soon</span></h5> -->
+            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Year End Special</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Hot Takes <span class="sep">/</span> 30 Dec 2023 <span class="sep">/</span> 00:00</small></span></div>
             <p class="mb-4">50th episode of the debut year 2023, celebrating 49 episodes across Talking Heads, Commuter Series and Hot Takes, this special episode will be more informal and looking back. Will there be a season 2? </p>
@@ -368,17 +369,16 @@
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP46.png');"></div>
           <div class="text">
             <!--<h5><span class="badge bg-warning">Coming Soon</span></h5>-->
-            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 46: How can cities curb their car-thusiasm?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 23 Dec 2023 <span class="sep">/</span> 01:03:12</small></span></div>
             <p class="mb-4">Chris Bruntlett is the author of two books along with Melissa Bruntlett, "Curbing Traffic" and "Building The Cycling City". He lays out the case for how reducing the dependence on cars can increase urban vitality and liveability for human beings, based on the dutch blueprint and his observations across many countries.</p>
-            <h5 class="mb-1">This episode will be available on</h5>
+            <h5 class="mb-1">Click icons below to watch/listen on the channel of your choice</h5>
             <div>
-              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://youtu.be/5px6L0X_hVg" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://open.spotify.com/episode/0GbZg7MpxYj6l3YSKyVHkd?si=f384a68a30fa479f" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685?i=1000639498324" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
             </div>
           </div>
@@ -389,7 +389,7 @@
             <h3 class="font-weight-light"><a href="#">Episode 45: Why city systems will shape India's future?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 16 Dec 2023 <span class="sep">/</span> 01:00:37</small></span></div>
             <p class="mb-4">Where does your city rank in being prepared for the future? Srikanth Vishwanathan and VR Vachana break down the ten instruments of change that holds back development of our cities in the Annual Survey of India's City Systems. They suggest action items in the short and medium term that can help us achieve good systems in cities.</p>
-             <h5 class="mb-1">This episode will be available on</h5>
+            <h5 class="mb-1">Click icons below to watch/listen on the channel of your choice</h5>
            <div>
               <a href="https://youtu.be/tbeb1ERyGoE" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
