--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
       <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <i class="bi bi-camera"></i>
-        <h1>OoruLabs</h1>
+        <img src="assets/img/Ooru Final logo-04.png" alt="">
+        <!-- <i class="bi bi-camera"></i>
+        <h1>OoruLabs</h1> -->
       </a>
 
       <nav id="navbar" class="navbar">
@@ -77,10 +77,11 @@
       </nav> <!-- .navbar -->
 
       <div class="header-social-links">
-        <a href="#" class="youtube"><i class="bi bi-youtube"></i></a>
-        <a href="#" class="spotify"><i class="bi bi-spotify"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></i></a>
+        <a href="https://www.youtube.com/@oorulabs" class="youtube" target="_blank"><i class="bi bi-youtube"></i></a>
+        <a href="https://open.spotify.com/show/6EYcxIPGW0UQvmkk67Ox0x?si=efbf1c2c47d449be" class="spotify" target="_blank"><i class="bi bi-spotify"></i></a>
+        <a href="https://podcasts.apple.com/us/podcast/the-oorulabs-podcast/id1682407685" class="apple" target="_blank"><i class="bi bi-broadcast"></i></a>
+        <a href="https://www.instagram.com/oorulabs/" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.facebook.com/oorulabs" class="facebook" target="_blank"><i class="bi bi-facebook"></i></i></a>
       </div>
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
