--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         <a href="https://podcasts.apple.com/us/podcast/the-oorulabs-podcast/id1682407685" class="apple" target="_blank"><i class="bi bi-broadcast"></i></a>
         <a href="https://www.instagram.com/oorulabs/" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
         <a href="https://www.facebook.com/oorulabs" class="facebook" target="_blank"><i class="bi bi-facebook"></i></i></a>
+        <a href="mailto:oorulabs@gmail.com" class="facebook" target="_blank"><i class="bi bi-envelope-at-fill"></i></i></a>
       </div>
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
@@ -98,6 +99,16 @@
           <h2>This is <span>OoruLabs</span>, the premier urban affairs podcast in the country</h2>
           <p>Now in Season 2, it is hosted by <span>Sathya Sankaran</span> an Urban Communicator and Entreprenuer with decades of experience.</p>
           <a href="https://www.youtube.com/@oorulabs" class="btn-get-started" target="_blank">Watch on YouTube</a>
+        </div>
+      <div class="row mt-3 justify-content-center">
+        <div class="col-lg-6 text-center">
+            <a href="https://www.youtube.com/@oorulabs" class="youtube" target="_blank"><i class="bi bi-youtube" style="font-size: 2rem;"></i></a>&nbsp;&nbsp;
+            <a href="https://open.spotify.com/show/6EYcxIPGW0UQvmkk67Ox0x?si=efbf1c2c47d449be" class="spotify" target="_blank"><i class="bi bi-spotify" style="font-size: 2rem;"></i></a>&nbsp;&nbsp;
+            <a href="https://podcasts.apple.com/us/podcast/the-oorulabs-podcast/id1682407685" class="apple" target="_blank"><i class="bi bi-broadcast" style="font-size: 2rem;"></i></a>&nbsp;&nbsp;
+            <a href="https://www.instagram.com/oorulabs/" class="instagram" target="_blank"><i class="bi bi-instagram" style="font-size: 2rem;"></i></a>&nbsp;&nbsp;
+            <a href="https://www.facebook.com/oorulabs" class="facebook" target="_blank"><i class="bi bi-facebook" style="font-size: 2rem;"></i></i></a>&nbsp;&nbsp;
+            <a href="mailto:oorulabs@gmail.com" class="facebook" target="_blank"><i class="bi bi-envelope-at-fill" style="font-size: 2rem;"></i></i></a>
+          </div>
         </div>
       </div>
     </div>
