--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-6 text-center">
           <h2>Welcome to <span>OoruLabs</span>, the premier urban affairs podcast in the country</h2>
-          <p>Now in Season 2, it is hosted by <span>Sathya Sankaran</span> an Urban Communicator and Entreprenuer with decades of experience.</p>
+          <p>Now in Season 2, it is hosted by <span>Sathya Sankaran</span> an Urban Communicator and Entreprenuer with decades of experience in transforming urban spaces.</p>
           <a href="https://www.youtube.com/@oorulabs" class="btn-get-started" target="_blank">Watch on YouTube</a>
         </div>
       <div class="row mt-3 justify-content-center">
